--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -7,6 +7,9 @@ on:
     paths:
       - "packages/container/**"
 
+  repository_dispatch:
+    types: [manual_trigger]
+
 defaults:
   run:
     working-directory: packages/container
