--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -7,8 +7,7 @@ on:
     paths:
       - "packages/container/**"
 
-  repository_dispatch:
-    types: [manual_trigger]
+  
 
 defaults:
   run:
@@ -16,7 +15,7 @@ defaults:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest,runs-on: self-hosted
 
     steps:
       - uses: actions/checkout@v2
